# opencode-session-search

./: AGENTS.md  Cargo.toml  LICENSE  README.md
src/: app.rs  db.rs  display.rs  fuzzy.rs  main.rs  ui.rs
