[package]
name = "opencode-session-search"
version = "0.1.0"
edition = "2024"
authors = ["kasbah <git@kaspar.systems>"]
description = "Search and resume OpenCode sessions across folders"
license = "MIT"
repository = "https://github.com/kasbah/opencode-session-search"
homepage = "https://github.com/kasbah/opencode-session-search"
readme = "README.md"
keywords = ["opencode", "tui", "session", "cli", "fuzzy"]
categories = ["command-line-utilities"]
exclude = ["screenshot.png"]

[[bin]]
name = "opencode-session-search"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
crossterm = "0.28"
dirs = "6"
fuzzy-matcher = "0.3"
ratatui = "0.29"
rusqlite = { version = "0.34", features = ["bundled"] }
